:bug: [GeoAlertCallout] Fix overflowing `GeoTable` as content

--- a/src/styles/elements/GeoAlertCallout/_geo-alert-callout.scss
+++ b/src/styles/elements/GeoAlertCallout/_geo-alert-callout.scss
@@ -28,7 +28,7 @@
 
       flex-grow: 1;
       flex-shrink: 1;
-      flex-basis: 0;
+      overflow: hidden;
     }
   }
 
